--- a/private_dot_config/nushell/history.txt
+++ b/private_dot_config/nushell/history.txt
@@ -1,38 +1,11 @@
-ls
-exit
-ps |sk
-pkill pypr
-ps|grep pypr
-ps aux|grep pypr
-ps -aux |grep pypr
-ps
-ps| pipr
-ps| where name==pipr
-ps| where name == pipr
-ps| where name == Hyprland
-which pypr
-pypr --debug /tmp/pypr.log
-rm /run/user/1000/hypr/918d8340afd652b011b937d29d5eea0be08467f5_1731091736_1792896244/.pyprland.sock
-git status
-sudo apt install atuin
-atuin
-atuin init nu
-atuin init nu | source
-atuin init nu | save ~/.local/share/atuin/init.nu
-chezmoi
-sudo apt install chezmoi
-cargo install chezmoi
-which pip
-pip install chezmoi
-nix-env -i chezmoi
-chezmoi
-nix-env -i chezmoi
-sh -c "$(curl -fsLS get.chezmoi.io)"
-exit
-ls .config/nushell/
+cz forget ~/.config/nushell/history.txt
 cz status
-chezmoi status
-exit
+cz apply
+ll ~/.config/nushell/
+cz add ~/.config/nushell/nu_scripts/custom-completions/bat/bat-completions.nu<\n>cz add ~/.config/nushell/nu_scripts/custom-completions/cargo/cargo-completions.nu<\n>cz add ~/.config/nushell/nu_scripts/custom-completions/eza/eza-completions.nu<\n>cz add ~/.config/nushell/nu_scripts/custom-completions/gh/gh-completions.nu<\n>cz add ~/.config/nushell/nu_scripts/custom-completions/git/git-completions.nu<\n>cz add ~/.config/nushell/nu_scripts/custom-completions/pre-commit/pre-commit-completions.nu<\n>cz add ~/.config/nushell/nu_scripts/custom-completions/pytest/pytest-completions.nu<\n>cz add ~/.config/nushell/nu_scripts/custom-completions/rg/rg-completions.nu<\n>cz add ~/.config/nushell/nu_scripts/custom-completions/ssh/ssh-completions.nu<\n>cz add ~/.config/nushell/nu_scripts/custom-completions/tealdeer/tldr-completions.nu<\n>cz add ~/.config/nushell/nu_scripts/custom-completions/toipe/toipe-completions.nu<\n>cz add ~/.config/nushell/nu_scripts/custom-completions/zellij/zellij-completions.nu<\n>
 cz status
-chezmoi status
-exit
+cz apply
+cz git status
+cz git add -- --all
+cz git commit -am 'add nushell and atuin'
+cz git commit -am -- 'add nushell and atuin'
